2016-10-07  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/__init__.py

	Removed make_same_size() as it can be replaced with np.broadcast_arrays().

	Several PEP8 fixes.

	I barely touched any functionality and the code produces the same results
	for a couple of dummy values.

2016-10-07  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/__init__.py:

	Perform 'import *' on all modules in the physics package. This leads to a
	flatter package hierarchy.

	Moved all functions to new module typhon.physics.em.

	* typhon/physics/em.py:

	Moved all functions related to the electro-magnetic spectrum to this
	module.

	* typhon/physics/thermodynamics.py: Use absolute imports.

	* typhon/physics/units/__init__.py:

	Perform 'import *' on all modules in the physics.units package.

	* typhon/physics/units/common.py,
	typhon/physics/units/constants.py,
	typhon/physics/units/em.py,
	typhon/physics/units/thermodynamics.py:

	Use absolute imports.

	* doc/physics.rst:

	Adjusted documentation to match the new hierarchy.

2016-10-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/units/constants.py:

	Added a module for constants with pint units. The values are taken from
	typhon.physics.constants to ensure consistency within typhon.

	* typhon/physics/units/em.py:

	Removed conversion functions as they are not needed.

	* typhon/physics/units/thermodynamics.py (density):

	Added new default value for R (taken from new constant module).

2016-10-06  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/tests, typhon/plots/tests/test_mplstyles.py:

	Removed test for typhon matplotlib stylesheets (not useful anymore).

2016-10-06  Richard larsson <ric.larsson@gmail.com>

	* typhon/geodesy/__init__.py (cartposlos2geocentric):
	
	Ported from atmlab.  Should work the same way or at least without regression
	
2016-10-04  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/math/__init__.py (sum_digits):

	Function to calculate the sum of digits.
